fixed margin on buttons on small screens

--- a/workout.css
+++ b/workout.css
@@ -82,6 +82,7 @@ h1 {
 	}
 	#Delete {
 		margin-left: 0px;
+		margin-top: 5px;
 	}
 }
 
